2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add check for GCC attribute `unused'.

	* rcsbase.h (RCS_UNUSED): New #define.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Declare `display_version' for rcsutil.c.

	* rcsutil.c: #include "gnu-h-v.h".

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move all DIFF* config to configure.in; assume diffutils.

	* Makefile.in (DIFF, DIFF3): Delete vars.
	(RCSTEST): Remove DIFF='$(DIFF)'.
	(bother.h): Don't output #define:s for `DIFF', `DIFF3'.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Require absolute filenames for external programs.

	* Makefile.in (absp): Delete var.
	(bother.h): Use absolute $(RCSPREFIX), via pwd(1);
	don't bother computing `ALL_ABSOLUTE', `DIFF_ABSOLUTE'.
	* rcsutil.c (exec_RCS): Move #define out of conditional.
	(set_uid_to): Update #if condition, taking DIFF_ABSOLUTE as 1.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move non-filename DIFF* configuration to configure.in.

	* merger.c: Don't #include "bother.h".
	* rcsdiff.c: Likewise.
	* Makefile.in (DIFF3_BIN, DIFFFLAGS, DIFF_L)
	(DIFF_FAILURE, DIFF_SUCCESS, DIFF_TROUBLE): Delete vars.
	(merger$o, rcsdiff$o): No longer depend on "bother.h".
	(bother.h): Remove #define generation for `DIFF_L', `DIFF3_BIN',
	`DIFFFLAGS', `DIFF_SUCCESS', `DIFF_FAILURE', `DIFF_TROUBLE'.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `SENDMAIL' configuration to configure.in.

	* rcs.c: Don't #include "bother.h".
	* Makefile.in (SENDMAIL): Delete var.
	(rcs$o): No longer depend on "bother.h".
	(bother.h): Remove `SENDMAIL' #define/#undef generation.

2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `ED' configuration into configure.in.

	* Makefile.in (ED): Delete var.
	(bother.h): Remove `ED' #define.
	Also, don't bother checking it for absoluteness.
	* merger.c (merge): Use `ED'.
	* rcsbase.h (prog_ed): Delete var decl.
	* rcsutil.c (prog_ed): Delete var.
